--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ALC Challenge</string>
+    <string name="share">Share Now</string>
+    <string name="username">Username:</string>
+    <string name="profile_url">Profile Url:</string>
 </resources>
